--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,15 @@
             android:layout_marginEnd="10dp"
             android:text="Filtrer" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/MapFilterButton"
+            style="@style/Widget.Material3.Button.TonalButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginEnd="10dp"
+            android:text="Filtrer" />
+
     </com.google.android.material.appbar.MaterialToolbar>
 
 
