--- a/app/src/main/res/layout/artist_recycler.xml
+++ b/app/src/main/res/layout/artist_recycler.xml
@@ -43,8 +43,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toggleButton" />
+        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
+        tools:listitem="@layout/artist_recycler_item"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
