--- a/app/src/main/res/layout/artist_recycler_item.xml
+++ b/app/src/main/res/layout/artist_recycler_item.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -51,17 +50,16 @@
 
     <TextView
         android:id="@+id/categorie_text_view"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="A lot of text here so that it overflows by a lot"
+        android:text="Musique Bange :3"
         android:textSize="18sp"
         android:textStyle="bold"
-
         app:layout_constraintBottom_toTopOf="@+id/paysTextView"
-        app:layout_constraintEnd_toEndOf="@id/artist_name_text_view"
-        app:layout_constraintStart_toStartOf="@+id/artist_name_text_view"
+        app:layout_constraintStart_toEndOf="@+id/pastille_genre"
         app:layout_constraintTop_toBottomOf="@+id/artist_name_text_view" />
 
     <TextView
@@ -73,20 +71,20 @@
         android:text="TextView"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/pastille_genre"
+        app:layout_constraintEnd_toEndOf="@+id/artist_name_text_view"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/categorie_text_view"
+        app:layout_constraintStart_toStartOf="@+id/artist_name_text_view"
         app:layout_constraintTop_toBottomOf="@+id/categorie_text_view" />
 
     <View
         android:id="@+id/pastille_genre"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:background="@drawable/circle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+        app:layout_constraintBottom_toTopOf="@+id/paysTextView"
+        app:layout_constraintStart_toStartOf="@+id/artist_name_text_view"
+        app:layout_constraintTop_toBottomOf="@+id/artist_name_text_view" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
