--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -6,6 +6,82 @@
     android:layout_height="match_parent"
     tools:context=".ui.planning.PlanningFragment">
 
+    <HorizontalScrollView
+        android:id="@+id/CustomHorizontalScrollView"
+        android:layout_width="412dp"
+        android:layout_height="43dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cat_legend_linear_layout">
+
+        <com.example.fimudroid.ui.planning.CustomView
+            android:id="@+id/customView3"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+    </HorizontalScrollView>
+
+
+    <ScrollView
+        android:id="@+id/scrollViewScene"
+        android:layout_width="60dp"
+        android:layout_height="0dp"
+        android:background="@color/purple_200"
+        app:layout_constraintBottom_toBottomOf="@+id/scrollViewA"
+        app:layout_constraintEnd_toStartOf="@+id/scrollViewA"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/scrollViewA">
+
+<!--        <HorizontalScrollView
+            android:id="@+id/scrollviewscenex"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">-->
+
+            <com.example.fimudroid.ui.planning.CustomViewScene
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+<!--        </HorizontalScrollView>-->
+
+
+    </ScrollView>
+
+
+    <ScrollView
+        android:id="@+id/scrollViewA"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        android:translationZ="-1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/scrollViewScene"
+        app:layout_constraintTop_toBottomOf="@+id/CustomHorizontalScrollView">
+
+        <HorizontalScrollView
+            android:id="@+id/HorizontalScrollPlanning"
+            android:layout_width="343dp"
+            android:layout_height="47dp"
+            android:layout_marginBottom="408dp"
+            android:overScrollMode="never"
+            android:translationZ="-1dp"
+            app:layout_constraintBottom_toBottomOf="@id/scrollViewA"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/scrollView3">
+
+            <com.example.fimudroid.ui.planning.CustomLinearLayout
+                android:id="@+id/planning_vertical_linear_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="@drawable/divider"
+                android:orientation="vertical"
+                android:showDividers="end|middle"
+                android:translationZ="1dp">
+
+            </com.example.fimudroid.ui.planning.CustomLinearLayout>
+        </HorizontalScrollView>
+    </ScrollView>
+
     <GridLayout
         android:id="@+id/cat_legend_linear_layout"
         android:layout_width="wrap_content"
@@ -20,36 +96,10 @@
         android:id="@+id/toggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:singleSelection="true"></com.google.android.material.button.MaterialButtonToggleGroup>
+        app:singleSelection="true">
 
-    <HorizontalScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cat_legend_linear_layout"
-        app:layout_constraintVertical_bias="0.0"
-        >
-
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-
-            <com.example.fimudroid.ui.planning.CustomLinearLayout
-                android:id="@+id/planning_vertical_linear_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:divider="@drawable/divider"
-                android:orientation="vertical"
-                android:showDividers="end|middle"></com.example.fimudroid.ui.planning.CustomLinearLayout>
-
-        </ScrollView>
-
-    </HorizontalScrollView>
+    </com.google.android.material.button.MaterialButtonToggleGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
