--- a/app/src/main/res/drawable/map_parking_velo.xml
+++ b/app/src/main/res/drawable/map_parking_velo.xml
@@ -6,7 +6,7 @@
             android:viewportWidth="24"
             android:viewportHeight="24">
             <path
-                android:fillColor="#1059B3"
+                android:fillColor="#1565C0"
                 android:pathData="M 5 4 L 19 4 L 19 18 L 5 18 L 5 4" />
         </vector>
     </item>
