--- a/app/src/main/res/drawable/map_secours.xml
+++ b/app/src/main/res/drawable/map_secours.xml
@@ -6,7 +6,7 @@
             android:viewportWidth="24"
             android:viewportHeight="24">
             <path
-                android:fillColor="#ED5353"
+                android:fillColor="#F44336"
                 android:pathData="M 12 2 A 7 7 0 0 0 5 9 C 5 14.25 12 22 12 22 C 12 22 19 14.25 19 9 A 7 7 0 0 0 12 2" />
         </vector>
     </item>
