--- a/app/src/main/res/drawable/map_sortie.xml
+++ b/app/src/main/res/drawable/map_sortie.xml
@@ -6,7 +6,7 @@
             android:viewportWidth="24"
             android:viewportHeight="24">
             <path
-                android:fillColor="#DC4848"
+                android:fillColor="#D32F2F"
                 android:pathData="M 5 4 L 19 4 L 19 18 L 5 18 L 5 4" />
         </vector>
     </item>
