--- a/app/src/main/res/layout/artiste_details_fragment.xml
+++ b/app/src/main/res/layout/artiste_details_fragment.xml
@@ -107,6 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="1dp"
             android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
             android:text="horaire de passage"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -115,38 +116,16 @@
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:text="horraire de passage" />
 
-        <ImageButton
-            android:id="@+id/VideoGroupe"
-            android:layout_width="49dp"
-            android:layout_height="43dp"
-            android:layout_marginTop="28dp"
-            android:layout_marginEnd="4dp"
-            android:adjustViewBounds="false"
-            android:background="@android:color/transparent"
-            android:contentDescription="VideoYoutube"
-            android:cropToPadding="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/mdi_youtube"
-            app:layout_constraintEnd_toStartOf="@+id/link_layout"
-            app:layout_constraintHorizontal_bias="0.941"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionView"
-            tools:ignore="TouchTargetSizeCheck"
-            tools:src="@drawable/mdi_youtube" />
-
         <LinearLayout
             android:id="@+id/link_layout"
-            android:layout_width="321dp"
+            android:layout_width="0dp"
             android:layout_height="36dp"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="28dp"
-            android:layout_marginEnd="20dp"
             android:background="@android:color/transparent"
             android:gravity="start"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/descriptionView"
+            app:layout_constraintStart_toStartOf="@+id/descriptionView"
             app:layout_constraintTop_toBottomOf="@+id/descriptionView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
