--- a/app/src/main/res/layout/news_details_fragment.xml
+++ b/app/src/main/res/layout/news_details_fragment.xml
@@ -22,68 +22,52 @@
                 android:layout_height="match_parent"
                 tools:layout="@layout/news_details_fragment">
 
-                <View
-                    android:id="@+id/side_bare_news"
-                    android:layout_width="9dp"
-                    android:layout_height="0dp"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/simple_rect"
-                    app:layout_constraintBottom_toBottomOf="@+id/actu_title"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/actu_title" />
-
                 <TextView
                     android:id="@+id/actu_title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="10dp"
                     android:text="Titre de l'acutalité"
                     android:textSize="32sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/side_bare_news"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/actu_image" />
 
                 <ImageView
                     android:id="@+id/actu_image"
                     android:layout_width="390dp"
                     android:layout_height="390dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:text="Core de l'actualité"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.642"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/detail_news_date"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_home_black_24dp" />
 
                 <TextView
                     android:id="@+id/actu_core"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="10dp"
                     android:text="uuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu"
                     android:textSize="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.45"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/actu_image" />
+                    app:layout_constraintEnd_toEndOf="@+id/actu_title"
+                    app:layout_constraintStart_toStartOf="@+id/actu_title"
+                    app:layout_constraintTop_toBottomOf="@+id/actu_title" />
 
                 <TextView
                     android:id="@+id/detail_news_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="15dp"
                     android:text="TextView"
                     android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/actu_title" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/actu_core"
+                    app:layout_constraintTop_toBottomOf="@+id/actu_core" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
