--- a/app/src/main/res/drawable/map_entree.xml
+++ b/app/src/main/res/drawable/map_entree.xml
@@ -1,5 +1,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:gravity="center">
+    <item
+        android:gravity="center"
+        android:left="29dp">
+
         <vector
             android:width="50dp"
             android:height="50dp"
@@ -13,7 +16,7 @@
 
     <item
         android:bottom="4dp"
-        android:right="1dp"
+        android:left="29dp"
         android:gravity="center">
         <vector
             android:width="22dp"
@@ -25,5 +28,33 @@
                 android:pathData="M13.34,8.17C12.41,8.17 11.65,7.4 11.65,6.47A1.69,1.69 0 0,1 13.34,4.78C14.28,4.78 15.04,5.54 15.04,6.47C15.04,7.4 14.28,8.17 13.34,8.17M10.3,19.93L4.37,18.75L4.71,17.05L8.86,17.9L10.21,11.04L8.69,11.64V14.5H7V10.54L11.4,8.67L12.07,8.59C12.67,8.59 13.17,8.93 13.5,9.44L14.36,10.79C15.04,12 16.39,12.82 18,12.82V14.5C16.14,14.5 14.44,13.67 13.34,12.4L12.84,14.94L14.61,16.63V23H12.92V17.9L11.14,16.21L10.3,19.93M21,23H19V3H6V16.11L4,15.69V1H21V23M6,23H4V19.78L6,20.2V23Z" />
         </vector>
     </item>
+    <item android:gravity="center"
+        android:right="29dp">
+        <vector
+            android:width="50dp"
+            android:height="50dp"
+            android:viewportWidth="24"
+            android:viewportHeight="24">
+            <path
+                android:fillColor="#C62828"
+                android:pathData="M 5 4 L 19 4 L 19 18 L 5 18 L 5 4" />
+        </vector>
+    </item>
 
+    <item
+        android:bottom="4dp"
+        android:right="29dp"
+        android:gravity="center">
+        <vector
+            android:width="22dp"
+            android:height="22dp"
+            android:viewportWidth="24"
+            android:viewportHeight="24">
+            <path
+                android:fillColor="#ffffff"
+                android:pathData="M 11.66 8.17 C 12.59 8.17 13.35 7.4 13.35 6.47 A 1.69 1.69 90 0 0 11.66 4.78 C 10.72 4.78 9.96 5.54 9.96 6.47 C 9.96 7.4 10.72 8.17 11.66 8.17 M 14.7 19.93 L 20.63 18.75 L 20.29 17.05 L 16.14 17.9 L 14.79 11.04 L 16.31 11.64 V 14.5 H 18 V 10.54 L 13.6 8.67 L 12.93 8.59 C 12.33 8.59 11.83 8.93 11.5 9.44 L 10.64 10.79 C 9.96 12 8.61 12.82 7 12.82 V 14.5 C 8.86 14.5 10.56 13.67 11.66 12.4 L 12.16 14.94 L 10.39 16.63 V 23 H 12.08 V 17.9 L 13.86 16.21 L 14.7 19.93 M 4 23 H 6 V 3 H 19 V 16.11 L 21 15.69 V 1 H 4 V 23 M 19 23 H 21 V 19.78 L 19 20.2 V 23 Z" />
+        </vector>
+    </item>
 </layer-list>
+
+
