--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cat_legend_linear_layout">
 
         <com.example.fimudroid.ui.planning.CustomView
-            android:id="@+id/customView3"
+            android:id="@+id/customView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
     </HorizontalScrollView>
@@ -53,8 +53,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:fillViewport="true"
-        android:overScrollMode="never"
-        android:translationZ="-1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/scrollViewScene"
         app:layout_constraintTop_toBottomOf="@+id/CustomHorizontalScrollView">
