--- a/app/src/main/res/layout/fragment_planning.xml
+++ b/app/src/main/res/layout/fragment_planning.xml
@@ -8,7 +8,7 @@
 
     <HorizontalScrollView
         android:id="@+id/CustomHorizontalScrollView"
-        android:layout_width="412dp"
+        android:layout_width="wrap_content"
         android:layout_height="43dp"
         android:scrollbars="none"
         app:layout_constraintStart_toStartOf="parent"
@@ -17,7 +17,8 @@
         <com.fimu.app.ui.planning.CustomView
             android:id="@+id/customView"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            />
     </HorizontalScrollView>
 
 
